Fix T79107: Crash changing brush size in GPencil sculpt

Reviewed By: fclem

Maniphest Tasks: T79107

Differential Revision: https://developer.blender.org/D8353